// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create new group 1`] = `
<Fragment>
  <div
    className="page-header"
    id="groups-header"
  >
    <h2
      className="page-title"
    >
      user_groups.page
    </h2>
    <div
      className="page-actions"
    >
      <Button
        disabled={false}
        id="groups-create"
        onClick={[Function]}
      >
        groups.create_group
      </Button>
    </div>
    <p
      className="page-description"
    >
      user_groups.page.description
    </p>
  </div>
</Fragment>
`;

exports[`should create new group 2`] = `
<Fragment>
  <div
    className="page-header"
    id="groups-header"
  >
    <h2
      className="page-title"
    >
      user_groups.page
    </h2>
    <div
      className="page-actions"
    >
      <Button
        disabled={false}
        id="groups-create"
        onClick={[Function]}
      >
        groups.create_group
      </Button>
    </div>
    <p
      className="page-description"
    >
      user_groups.page.description
    </p>
  </div>
  <Form
    confirmButtonText="create"
    header="groups.create_group"
    onClose={[Function]}
    onSubmit={[MockFunction]}
  />
</Fragment>
`;
